<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HAPIS</string>
    <string name="API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyCl1fruupMLaDB11EO0hHb2Ahx7rTYzwkA</string>
    <string name="phone_error_text"> Enter a valid phone number</string>
    <string name="mobile_connected">Mobile Connected!</string>
    <string name="wifi_connected">Wifi Connected!</string>
    <string name="no_network_operating">No Network Operating!</string>
    <string name="option_network">Do you want to close the application? </string>
    <string name="positive_button_network">CLOSE</string>
    <string name="negative_button_network">WAIT</string>
    <string name="content_description" translatable="false">Content description</string>
    <string name="text" translatable="false">text</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="logo_intro_title">HAPIS</string>
    <string name="donor_intro_title">DONOR</string>
    <string name="volunteer_intro_tile">VOLUNTEER</string>
    <string name="liquid_galaxy_intro_title">LIQUID GALAXY SYSTEM</string>
    <string name="logo_intro_description">This is a social app where you can donate resources to someone that really need it.</string>
    <string name="donor_intro_description">Become a donor and you will have the opportunity to see profiles of people in need and help them.</string>
    <string name="volunteer_intro_description">Be a volunteer and help to register and manage the profiles of people that need help.</string>
    <string name="liquid_galaxy_description">If you have a Liquid Galaxy System installed you can view all this info into a spectacular panoramic screens.</string>
    <string name="next_button">Next</string>
    <string name="get_started_button">GET STARTED</string>
    <string name="login_title">Login to continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_text_view">You also can continue with Google:</string>
    <string name="signup_tex_view">Don\'t have an account yet?</string>
    <string name="liquid_galaxy_text">Here you can access the Liquid Galaxy System:</string>
    <string name="sign_up">REGISTER NOW</string>
    <string name="liquid_galaxy_tv">LIQUID GALAXY</string>
    <string name="error_login">Check your username or password</string>
    <string name="user_exists">This user already exists!Choose another name.</string>
    <string name="login_button">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_error_text">Enter a valid username. Username must have at least 4 characters</string>
    <string name="password_error_text">Introduce a valid password.Password must have at least 6 characters </string>
    <string name="complete_life_toast">You have to fill this field</string>
    <string name="progress_login">Starting session…</string>
    <string name="email_error_text">Enter a valid email</string>
    <string name="register_activity_name">Register</string>
    <string name="donor_cv_title">REGISTER AS DONOR</string>
    <string name="volunteer_cv_title">REGISTER AS VOLUNTEER</string>
    <string name="cv_more_button">KNOW MORE</string>
    <string name="cv_start_button">START</string>
    <string name="register_pop_up_button">OK</string>
    <string name="volunteer_know_more_title">What can you do if you register as volunteer?</string>
    <string name="volunteer_know_more_text">1. You can connect with people without resources who need our help \n\n
                                            2. You can create and manage profiles for them, since they do not always have a mobile phone connected to the Internet \n\n
                                            3. You can help to make the donation delivery in case the donors do not have the possibility to do it personally
    </string>
    <string name="donor_know_more_title">What can you do if you register as a donor?</string>
    <string name="donor_know_more_text">1. You can help people without basic resources such as food, accommodation or clothing \n\n
                                  2. You can choose the profile of the person who most attracts your attention and help them \n\n
                                  3. You can donate food, clothing, accommodation, work or personal hygiene products \n\n
                                  4. You can deliver the aid personally or with the help of a volunteer</string>
    <string name="register_user_name">Register User</string>
    <string name="register_user_title">Create an account</string>
    <string name="register_user_pop_up_title">REGISTRATION SUCCESS</string>
    <string name="register_user_login_info">Login Info</string>
    <string name="register_user_optional_info">Optional Info</string>
    <string name="register_user_pop_up_message">Thank you. Please check your email to activate your account.</string>
    <string name="register_user_terms">I agree the <a href="https://freetexthost.net/cwlxbsV">Terms and Conditions</a> and the <a href="https://freetexthost.net/fDVzKMh">Privacy Policy</a></string>
    <string name="register_user_terms_error">You have to agree the Terms and conditions first!</string>
    <string name="register_user_username_hint">Username</string>
    <string name="register_user_email_hint">Email</string>
    <string name="register_user_password_hint">Password</string>
    <string name="register_user_first_name_hint">First Name</string>
    <string name="register_user_last_name_hint">Last Name</string>
    <string name="register_user_phone_number_hint">Phone number</string>
    <string name="register_user_button">REGISTER</string>
    <string name="register_user_pop_up_button">OK</string>
    <string name="register_pop_up_title">REGISTRATION SUCCESS</string>
    <string name="register_pop_up_message">Thank you. Please check your email to activate your account.</string>
    <string name="register_error">"Something went wrong!</string>
    <string name="forgot_password_name">Recover password</string>
    <string name="is_email_valid_error">The email field is not valid or is empty</string>
    <string name="fp_title">FORGOT YOUR PASSWORD?</string>
    <string name="fp_body">To reset your password, enter the email address you use to login to HAPIS.</string>
    <string name="pop_up_title">EMAIL SENT</string>
    <string name="pop_up_message">An email has been sent to the supplied email address.\nFollow the instructions in the email to reset your password.</string>
    <string name="fp_button">RECOVER PASSWORD</string>
    <string name="pop_up_button">OK</string>
    <string name="fp_email_hint">Email</string>
    <string name="fp_recover_failed">Fail to send reset password email!\nCheck that the email is correct</string>
    <string name="user_home_name">Volunteer</string>
    <string name="user_menu_home">Home</string>
    <string name="user_menu_donate">Donate</string>
    <string name="user_menu_profile">Profile</string>
    <string name="user_menu_configuration">Configuration</string>
    <string name="user_menu_logout">Logout</string>
    <string name="user_menu_contact">Contact</string>
    <string name="user_username_text_view">Username</string>
    <string name="user_email_text_view">Email</string>
    <string name="user_phone_text_view">Phone Number</string>
    <string name="configuration_menu">Configuration</string>
    <string name="contact_menu">Contact</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_list_map">List Map</string>
    <string name="welcome_user">WELCOME,</string>
    <string name="user_profile_info">PROFILE INFO:</string>
    <string name="edit_button_toast">This button will let the volunteer edit the shown fields of the homeless</string>
    <string name="delete_button_toast">With this button the homeless profile will be deleted</string>
    <string name="welcome_vol">WELCOME TO</string>
    <string name="first_homeless">Go on the floating menu and select\n New homeless profile\n to create your first homeless profile.</string>
    <string name="new_homeless_profile">New homeless profile</string>
    <string name="send_delivery_notification">Donations delivery</string>
    <string name="search_hint_donor_volunteer">Username, Need or Address</string>
    <string name="donate_title">DONATE TO HAPIS</string>
    <string name="donate_text">Your generous support provide real people with things like food and helps us to continue with this application.</string>
    <string name="donate_button">DONATE MONEY</string>
    <string name="or">OR</string>
    <string name="donate_video">Watch a 30 seconds video to donate €0.40.</string>
    <string name="video_button">VIEW VIDEO</string>
    <string name="payment_activity_name">Donate </string>
    <string name="payment_title">Introduce the donation amount:</string>
    <string name="payment_card_credit">Introduce your credit card data:</string>
    <string name="currency_hint">0,00 €</string>
    <string name="payment_donate_button">DONATE</string>
    <string name="payment_confirm_title">Confirm Before Purchase</string>
    <string name="fragment_terms_title">Before you start creating the profile, read the following terms and privacy policy to the homeless persona and make sure that he/she understand it and gives his/her consent with the signature.</string>
    <string name="fragment_terms_text"> 1. Next, the volunteer will ask you for some personal information in order to create your profile, so that people will better understand your situation and
            be able to help you \n\n2. You will not be asked for your real name, but a username that will be visible to donors \n\n3. You can add a photo of yourself to the profile, but it is not
            required. \n\n4. You will be asked for your birth date,your phone number, a short story from your life and what you need most right now. \n\n5. You will have
            to specify the location and a time in which you can be found in said location. This information is used by people who want to donate something to hand things over to you.\n\n6. All the data provided will be used only
            so that people know you better in order to help you and at no time will it be transferred to third parties. </string>
    <string name="clear_signature_button">CLEAR </string>
    <string name="save_signature_button">SAVE </string>
    <string name="agreement">I agree the terms and conditions</string>
    <string name="lg_title">Connect to Liquid Galaxy</string>
    <string name="lg_username">Username</string>
    <string name="lg_username_password_hint">lg</string>
    <string name="lg_password">Password</string>
    <string name="lg_ip">Host IP</string>
    <string name="lg_ip_hint">X.X.X.X</string>
    <string name="lg_port">Port</string>
    <string name="lg_port_hint">22</string>
    <string name="lg_start_btn">START</string>
    <string name="basic_category">Basic Settings</string>
    <string name="advanced_category">Advanced Settings</string>
    <string name="logos_title">Logos</string>
    <string name="logos_summary">Choose the slave where you want to see the logos.</string>
    <string name="homeless_balloon_slaves">Homeless</string>
    <string name="homeless_balloon_summary">Choose the slave where you want to see the homeless balloon.</string>
    <string name="local_statistics_slaves">Local Statistics</string>
    <string name="local_statistics_summary">Choose the slave where you want to see the local statistics balloon.</string>
    <string name="global_statistics_slaves">Global Statistics</string>
    <string name="global_statistics_summary">Choose the slave where you want to see the global statistics balloon.</string>
</resources>