<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_menu_home"
            android:title="@string/user_menu_home"
            android:icon="@drawable/menu_home_icon"/>

        <item
            android:id="@+id/user_menu_donate"
            android:title="@string/user_menu_donate"
            android:icon="@drawable/menu_donate_icon"/>

    </group>

    <item android:title="@string/configuration_menu">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/user_menu_configuration"
                    android:title="@string/user_menu_configuration"
                    android:icon="@drawable/menu_configuration_icon"/>

                <item
                    android:id="@+id/user_menu_logout"
                    android:title="@string/user_menu_logout"
                    android:icon="@drawable/menu_logout_icon"/>
            </group>
        </menu>

    </item>


    <item android:title="@string/contact_menu">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/user_menu_contact"
                    android:title="@string/user_menu_contact"
                    android:icon="@drawable/menu_contact_icon"/>
            </group>
        </menu>

    </item>

</menu>