<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".liquidGalaxy.FirstActivityLG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margins"
        android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/elevation"
            android:layout_margin="@dimen/cv_margins">

            <TextView
                android:id="@+id/lg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lg_title"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:textColor="@color/grey"
                android:textSize="@dimen/body"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:text="@string/lg_username"
                    android:textSize="@dimen/title"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lg_username_password_hint"
                        android:textSize="@dimen/body"
                        android:inputType="textPersonName"
                        android:drawablePadding="@dimen/padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:text="@string/lg_password"
                    android:textSize="@dimen/title"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lg_username_password_hint"
                        android:textSize="@dimen/body"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="@dimen/padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:text="@string/lg_ip"
                    android:textSize="@dimen/title"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lg_ip_hint"
                        android:drawablePadding="@dimen/padding"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/body"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lg_port"
                    android:textSize="@dimen/title"
                    android:layout_marginTop="@dimen/top_margin"
                    android:textColor="@color/colorPrimary" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lg_port_hint"
                        android:textSize="@dimen/body"
                        android:inputType="numberDecimal"
                        android:drawablePadding="@dimen/padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lg_start_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top_margin"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/lg_start_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>


